# sistema-notifica-multicanal

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
example/: composition_root.py
notifications/domain/interfaces/: notifier.py
notifications/domain/repositories/: notification_repository.py
notifications/infrastructure/notifiers/: sms_notifier.py
notifications/infrastructure/repositories/: in_memory_notification_repository.py
notifications/main/: composition_root.py
src/notifications/application/use_cases/: send_notification_use_case.py
src/notifications/domain/entities/: notification.py  notification_status.py
src/notifications/domain/interfaces/: notifier.py
src/notifications/domain/repositories/: notification_repository.py
src/notifications/infrastructure/notifiers/: email_notifier.py  sms_notifier.py
src/notifications/infrastructure/repositories/: in_memory_notification_repository.py
src/tests/unit/: conftest.py
src/tests/unit/application/use_cases/: test_send_notification_use_case.py
tests/unit/: conftest.py
tests/unit/application/use_cases/: test_send_notification_use_case.py
tests/unit/domain/entities/: test_notification.py
tests/unit/infrastructure/notifiers/: test_email_notifier.py  test_sms_notifier.py
tests/unit/infrastructure/repositories/: test_in_memory_notification_repository.py
