[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "sistema-notifica-multicanal"
version = "0.1.0"
description = "Serviço de Notificações com Clean Architecture"
readme = "README.md"
requires-python = ">=3.12"

dependencies = []

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[project.optional-dependencies]
dev = [
  "pytest==9.0.*",
  "pytest-cov==7.0.*",
  "black==25.12.*",
  "ruff==0.14.*",
  "pre-commit==4.5.*"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-ra -q"

[tool.ruff]
line-length = 88
fix = true
ignore = ["E501"]

[tool.ruff.lint]
select = ["E", "F", "B", "I"]
exclude = ["venv", ".venv", "__pycache__", "build", "dist"]

[tool.black]
line-length = 79